Change to EdTech Sales headline

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -68,7 +68,7 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Winter Consulting</h1>
+      <h1>EdTech Sales Consulting</h1>
       <p class="lead text-muted">Do you need help selling your EdTech product or service? Winter Consulting is a full-service sales consulting firm specializing in growth strategy development, sales and marketing executive search and team building, and the execution of business development plans.</p>
       <p>
         <a href="#" class="btn btn-primary my-2">Email Me for a Free Consultation</a>
