--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -69,7 +69,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1>EdTech Sales Rep Consulting</h1>
-      <p class="lead text-muted">Do you need help selling your EdTech product or service? EdTech Sales Rep Consulting is a full-service sales consulting firm specializing in growth strategy development, sales and marketing executive search and team building, and the execution of business development plans.</p>
+      <p class="lead text-muted">gfdsgsdfgdgDo you need help selling your EdTech product or service? EdTech Sales Rep Consulting is a full-service sales consulting firm specializing in growth strategy development, sales and marketing executive search and team building, and the execution of business development plans.</p>
       <p>
         <a href="#" class="btn btn-primary my-2">Email Me for a Free Consultation</a>
       </p>
