--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -73,7 +73,7 @@
       <p>
         <a href="#" class="btn btn-primary my-2">Email Me for a Free Consultation</a>
       </p>
-      <img src="{% static 'apple.png' %} width=300" />
+      <img src="{% static 'apple.png' %}" />
     </div>
   </section>
 
