--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -55,10 +55,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="#">Services</a>
+            <a class="nav-item nav-link" href="{% url 'allblogs' %}">Services</a>
+            <a class="nav-item nav-link" target="_blank" href="https://medium.com/@shanewin">Medium</a>
             <a class="nav-item nav-link" href="#">Podcast</a>
-            <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
-            <a class="nav-item nav-link" href="{% static 'Shane_Winter_Resume_2019_2.pdf' %}">Resume</a>
+            <a class="nav-item nav-link" href="#">About</a>
           </div>
         </div>
       </nav>
@@ -71,7 +71,7 @@
       <h1>EdTech Sales Rep Consulting</h1>
       <p class="lead text-muted">Do you need help selling your EdTech product or service? EdTech Sales Rep Consulting is a full-service sales consulting firm specializing in growth strategy development, sales and marketing executive search and team building, and the execution of business development plans.</p>
       <p>
-        <a href="#" class="btn btn-primary my-2">Email Me for a Free Consultation</a>
+        <a href="#" class="btn btn-primary my-2">Email Us for a Free Consultation</a>
       </p>
       <img src="{% static 'apple.png' %}" />
     </div>
