--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -87,15 +87,16 @@
           <div class="card mb-4 shadow-sm">
           <img class="card-img-top" src="{{ job.image.url }}" />
             <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
+              <p class="card-text" style="font-variant: small-caps; text-align: center; font-weight: bold;">{{ job.summary }}</p>
             </div>
           </div>
         </div>
         {% endfor %}
       </div>
+          </div>
+        <div ALIGN="center">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/viewform?embedded=true" width="640" height="1097" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
-
-    </div>
+</div>
   </div>
 
 </main>
