--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -98,17 +98,17 @@
                   <div class="row">
                     <div class="col-md-4">
 
-                      <p>Partner with EdTech Sales Rep Consulting for all your recruiting, interviewing, and hiring needs. </p>
+                      <p>Partner with EdTech Sales Rep Consulting for all your recruiting, interviewing, and hiring needs. By learning more about your EdTech offering, we'll build a sales talent strategy aimed at identifying, recruiting, and keeping top performers</p>
                       <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
                     </div>
                     <div class="col-md-4">
 
-                      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                      <p>With a true working knowledge of the EdTech landsacpe, EdTech Sales Rep Consutling will help your company develop a sales plan that greatly improves your prospects for record-breaking sales performance.</p>
                       <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
                     </div>
                     <div class="col-md-4">
 
-                      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                      <p>EdTech Sales Rep Consulting is your in-house sales manager, trainer, and coach. We will implement processes to drive sales numbers higher and ensure that sales objectives are met with a hands-on apporach.</p>
                       <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
                     </div>
                   </div>
