--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
 
-    <title>EdTech Sales Consulting</title>
+    <title>EdTech Sales Rep Consulting</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="{% url 'allblogs' %}">Services</a>
-            <a class="nav-item nav-link" target="_blank" href="https://medium.com/@shanewin">Medium</a>
+            <a class="nav-item nav-link" target="_blank" href="https://medium.com/@edtechsalesrep">Medium</a>
             <a class="nav-item nav-link" href="#">Podcast</a>
             <a class="nav-item nav-link" href="#">About</a>
           </div>
