Updated Google Contact Form

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -103,7 +103,9 @@
 <br />
 <br />
 
-
+<div ALIGN="center">
+<a id="consultation"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/viewform?embedded=true" width="640" height="1097" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe></a>
+</div>
 <!---{% for blog in blogs.all %}
 <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
 {{ blog.pub_date_pretty }}
