Change width of form and add HR tag

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -44,7 +44,7 @@
       }
 
     .form-style-7{
-    	max-width:400px;
+    	max-width:500px;
     	margin:50px auto;
     	background:#fff;
     	border-radius:2px;
@@ -226,7 +226,9 @@
                     </div>
                   </div>
 
-<br />
+
+
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
         <div ALIGN="center">
 <!-- <a id="consultation"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/viewform?embedded=true" width="640" height="1097" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe></a> -->
