Updated Services Page

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -26,22 +26,135 @@
 <meta name="theme-color" content="#563d7c">
 
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
+<style>
+  .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
+
+.form-style-7{
+  max-width:500px;
+  margin:50px auto;
+  background:#fff;
+  border-radius:2px;
+  padding:20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.form-style-7 h1{
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0px 0px 20px 0px;
+  color: #5C5C5C;
+  font-size:x-large;
+}
+.form-style-7 ul{
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+.form-style-7 li{
+  display: block;
+  padding: 9px;
+  border:1px solid #DDDDDD;
+  margin-bottom: 30px;
+  border-radius: 3px;
+}
+.form-style-7 li:last-child{
+  border:none;
+  margin-bottom: 0px;
+  text-align: center;
+}
+.form-style-7 li > label{
+  display: block;
+  float: left;
+  margin-top: -19px;
+  background: #FFFFFF;
+  height: 20px;
+  padding: 2px 5px 2px 5px;
+  color: #B9B9B9;
+  font-size: 14px;
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.form-style-7 input[type="text"],
+.form-style-7 input[type="date"],
+.form-style-7 input[type="datetime"],
+.form-style-7 input[type="email"],
+.form-style-7 input[type="number"],
+.form-style-7 input[type="search"],
+.form-style-7 input[type="time"],
+.form-style-7 input[type="url"],
+.form-style-7 input[type="password"],
+.form-style-7 textarea,
+.form-style-7 select
+{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  width: 100%;
+  display: block;
+  outline: none;
+  border: none;
+  height: 25px;
+  line-height: 25px;
+  font-size: 16px;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.form-style-7 input[type="text"]:focus,
+.form-style-7 input[type="date"]:focus,
+.form-style-7 input[type="datetime"]:focus,
+.form-style-7 input[type="email"]:focus,
+.form-style-7 input[type="number"]:focus,
+.form-style-7 input[type="search"]:focus,
+.form-style-7 input[type="time"]:focus,
+.form-style-7 input[type="url"]:focus,
+.form-style-7 input[type="password"]:focus,
+.form-style-7 textarea:focus,
+.form-style-7 select:focus
+{
+}
+.form-style-7 li > span{
+  background: #F3F3F3;
+  display: block;
+  padding: 3px;
+  margin: 0 -9px -9px -9px;
+  text-align: center;
+  color: #C0C0C0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+}
+.form-style-7 textarea{
+  resize:none;
+}
+.form-style-7 input[type="submit"],
+.form-style-7 input[type="button"]{
+  background: #2471FF;
+  border: none;
+  padding: 10px 20px 10px 20px;
+  border-bottom: 3px solid #5994FF;
+  border-radius: 3px;
+  color: #D2E2FF;
+}
+.form-style-7 input[type="submit"]:hover,
+.form-style-7 input[type="button"]:hover{
+  background: #6B9FFF;
+  color:#fff;
+}
+
+
+</style>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
   </head>
@@ -73,10 +186,12 @@
 
 <h3 class="text-center pt-3">Market Research & Business Strategy</h3>
 <div style="text-align:center;"><img class="img-fluid" src="{% static 'plan.png' %}" height=200 width=200 /></div>
-<p>How can your EdTech offering compete in increasingly diverse and rapidly growing industry?</p>
-<p>Right now, your EdTech solution has a competitive advantage over all the similar offerings in the market. Most likely, you already know this. But, getting the school administrators to realize why your solutions is the best option is not as easy as it may seem.</p>
-<p>Only someone with EdTech sales experience that knows the marketplace intimately - and knows how to position products and services in front of administrators and teachers to generate the most interest -&nbsp; will be able to do so.</p>
-<p>At EdTech Sales Rep Consulting, we'll be able to analize your product and understand the unique story behind it that will be the catalyst for sales growth and large-scale adoption. In addition, we will know how your products&nbsp; stacks up again competing products and solutions. We'll be able to pinpoint the perfect strategy. We'll figure out what the competing companies are doing, how you can gain an advantage by reaching out to under-appreciated marketis in the education space that do not garner as much attention bu
+<p>How can your EdTech offering compete in an increasingly diverse and rapidly growing industry?</p>
+<p>At EdTech Sales Rep Consutling, we understand the practices and sales strategies of the leading EdTech companies. Not only will we help you identify and implement a successful sales strategy, but we will also empower your salespeople with the tools and processes they need to uncover potential customers' business needs and motives for buying that align specifically with your unique EdTech solution.</p>
+<p>Right now, your EdTech solution has a competitive advantage over all the similar offerings in the market. Most likely, you already know this. But, getting the school administrators to realize why your solution is the best option is not as easy as it may seem.</p>
+<p>Only someone with the EdTech sales experience that knows the marketplace intimately - and knows how to position products and services in front of administrators and teachers to generate the most interest -&nbsp; will be able to do so.</p>
+<p>At the same time, if any EdTech company is relying on the experience of their salespeople as the primary driver for growth, there is, or will eventually be, a problem. The lead generation, presentation, and closing methods must be repeatable and scalable. In addition, your sales processes need to evolve and improve over time in direct relation to how your customer's demands and needs constantly change. This is where EdTech Sales Rep Consulting will help. </p>
+<p>At EdTech Sales Rep Consulting, we'll be able to analyze your product and understand the unique story behind it that will be the catalyst for sales growth and large-scale adoption. In addition, we will know how your EdTech solution stacks up against competing products. We'll be able to pinpoint the perfect strategy. In doing so, we'll identify the correct stakeholders to target with sales and marketing outreach, and even uncover under-appreciated markets in the education space that do not always garner as much attention. For further guidance on your Market Research & Business Strategy, please <a href="#consultation">click here</a> to email us for a free consultation.
 <br />
 <br />
 
@@ -91,11 +206,11 @@
 <li>Screen prospects with targeted questions to identify strengths and weaknesses specific to the EdTech field based on our in depth market knowledge</li>
 <li>Define and work within time frame and budget for hiring</li>
 </ul>
-<p>With extensive knowledge of the industry, the EdTech Sales Rep Consulting recruitment model takes an intensive approach to finding the best fit for your company.</p>
+<p>With extensive knowledge of the industry, the EdTech Sales Rep Consulting recruitment model takes an intensive approach to finding the best fit for your company. If you are interested in partnering with Ed Tech Sales Rep Consulting to jump-start your Executive Search & Recruiting efforts, please <a href="#consultation">click here</a> to email us for a free consultation.</p>
 <br />
 <br />
 <h3 class="text-center pt-3">Execute & Improve</h3>
-<div style="text-align:center;"><img class="img-fluid" src="{% static 'plan.png' %}" height=200 width=200 /></div>
+<div style="text-align:center;"><img class="img-fluid" src="{% static 'iexecute.png' %}" height=200 width=200 /></div>
 <p>How can your EdTech offering compete in increasingly diverse and rapidly growing industry?</p>
 <p>Right now, your EdTech solution has a competitive advantage over all the similar offerings in the market. Most likely, you already know this. But, getting the school administrators to realize why your solutions is the best option is not as easy as it may seem.</p>
 <p>Only someone with EdTech sales experience that knows the marketplace intimately - and knows how to position products and services in front of administrators and teachers to generate the most interest -&nbsp; will be able to do so.</p>
@@ -103,8 +218,74 @@
 <br />
 <br />
 
-<div ALIGN="center">
-<a id="consultation"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/viewform?embedded=true" width="640" height="1097" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe></a>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+        <div ALIGN="center">
+<!-- <a id="consultation"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/viewform?embedded=true" width="640" height="1097" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe></a> -->
+<a id="consultation">
+
+<script type="text/javascript">
+  //auto expand textarea
+  function adjust_textarea(h) {
+      h.style.height = "20px";
+      h.style.height = (h.scrollHeight)+"px";
+  }
+  </script>
+<script type="text/javascript">var submitted=false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+  onload="if(submitted) {window.location='/blog/';}"></iframe>
+<form class="form-style-7" action="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
+
+<h1>Free Consultation Request</h1>
+  <ul>
+  <li>
+      <label for="firstname">First Name*</label>
+      <input type="text" maxlength="100" name="entry.672116849" required>
+      <span>Enter your first name here</span>
+  </li>
+  <li>
+      <label for="lastname">Last Name*</label>
+      <input type="text" maxlength="100" name="entry.284957780" required>
+      <span>Enter your last name here</span>
+  </li>
+  <li>
+      <label for="title">Title*</label>
+      <input type="text" maxlength="100" name="entry.732400030" required>
+      <span>Enter your business title or position here</span>
+    </li>
+    <li>
+      <label for="title">Company*</label>
+      <input type="text" maxlength="100" name="entry.1166157218" required>
+      <span>Enter the name of the company for which you work here</span>
+    </li>
+    <li>
+      <label>Email*</label>
+      <input type="email" maxlength="100" name="entry.811627178" required>
+      <span>Enter your email here</span>
+    </li>
+    <li>
+      <label>Phone*</label>
+      <input type="number" maxlength="100" name="entry.467692756" required>
+      <span>Enter your preffered phone number here</span>
+    </li>
+    <li>
+      <label>Story</label>
+      <textarea rows="5" name="entry.444309058"></textarea>
+      <span>Tell me a little bit more about yourself or your EdTech company here</span>
+    </li>
+    <li>
+      <label>Purpose</label>
+      <textarea rows="5" name="entry.1149359166"></textarea>
+      <span>Let me know if there is anything in particular you would like to discuss here</span>
+    </li>
+    <li>
+      <button type="submit">Send This</button>
+    </li>
+</ul>
+</form>
+</a>
+
+
 </div>
 <!---{% for blog in blogs.all %}
 <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
